--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "redis": "^5.8.3",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "ws": "^8.18.3"
   }
 }
