--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,46 @@
+# Dependencies
 node_modules
+npm-debug.log
+yarn-error.log
+package-lock.json
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Development files
 .git
+.gitignore
+.vscode
+.idea
+*.md
+README.md
+
+# Testing
+coverage
+*.test.js
+*.spec.js
+
+# CI/CD
+.github
+.gitlab-ci.yml
+
+# Logs
+logs
+*.log
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Cache directories
+.npm
+.cache
+.eslintcache
+node_modules/.cache
+
+# Temporary files
+*.tmp
+*.swp
+*~
