--- a/.dockerignore
+++ b/.dockerignore
@@ -1,32 +1,6 @@
-# Backend için Production Dockerfile
-FROM node:18-alpine
-
-# Çalışma dizini
-WORKDIR /app
-
-# Sistem bağımlılıkları (gerekirse)
-RUN apk add --no-cache bash
-
-# Package files'ı kopyala
-COPY package*.json ./
-
-# Dependencies yükle
-# npm ci yerine npm install kullanıyoruz (package-lock.json olmayabilir)
-RUN npm install --only=production && \
-    npm cache clean --force
-
-# Uygulama dosyalarını kopyala
-COPY . .
-
-# Startup script'i executable yap
-RUN chmod +x scripts/start-with-migration.sh
-
-# Port
-EXPOSE 3000
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
-  CMD node -e "require('http').get('http://localhost:3000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
-
-# Start
-CMD ["sh", "scripts/start-with-migration.sh"]
+node_modules
+.env
+.git
+*.log
+npm-debug.log*
+.DS_Store
